# geotiv

./: .envrc  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  devbox.json  run.sh
examples/: generate_random_image.cpp  generate_test_pattern.cpp  main.cpp
include/geotiv/: geotiv.hpp  parse.hpp  parser.hpp  raster.hpp  types.hpp  writter.hpp
test/: test_multi_ifd.cpp  test_parser.cpp  test_raster.cpp  test_types.cpp  test_writer.cpp
